Fix input word wrapping. Fixes #125

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -322,10 +322,10 @@ html, body, .container {
 }
 
 .input {
-    height: @box-height;
-    min-height: @box-height;
+    // min-height: @box-height;
     width: 100%;
     background: @input-bg;
+    word-break: break-word;
 }
 
 .input form {
